package interfaces;

import logic.compute.ProcessUnit;

public interface Computable {
    double compute(ProcessUnit processUnit);
}
