package interfaces;

public interface Duplicatable {
    void duplicateTask(int taskNumber);
}
