package interfaces;

public interface Modifiable {
    void modify(int modifyValue);
}
